# xarm_ros

./: .gitignore
xarm6_demo_app1/: CMakeLists.txt  package.xml
xarm6_demo_app1/include/interactivity/: imarker.h  interactive_robot.h
xarm6_demo_app1/include/xarm6_demo_app1/: CApproach.h  CCylinderSegment.h  CGrasp.h  CGraspWithPlan.h  CMotionPlanningAPITest.h  CMotionPlanningPipelineTest.h  CMoveGroupTest.h  CMovingAveragePose.h  CObjListManager.h  CPickAndPlaceTest.h  CPlanningSceneROSAPITest.h  CPlanningSceneTest.h  CRobotModelStateTest.h  CVisualizingCollisionsTest.h  Quaternion.h  RotationMatrix.h  Utility.h  Vector3.h  conversion.h
xarm6_demo_app1/launch/: republish_realsense_msgs.launch  republish_realsense_msgs_tentative.launch  republish_realsense_msgs_tentative_2.launch  xarm6_demo_app1.launch
xarm6_demo_app1/scripts/: \  hoge.py  srecog_node.py  srecog_node_mod.py  tracking_node.py
xarm6_demo_app1/src/: CApproach.cpp  CCylinderSegment.cpp  CGrasp.cpp  CGraspWithPlan.cpp  CMotionPlanningAPITest.cpp  CMotionPlanningPipelineTest.cpp  CMoveGroupTest.cpp  CMovingAveragePose.cpp  CObjListManager.cpp  CPickAndPlaceTest.cpp  CPlanningSceneROSAPITest.cpp  CPlanningSceneTest.cpp  CRobotModelStateTest.cpp  CVisualizingCollisionsTest.cpp  xarm6_demo_app1.cpp  xarm6_demo_app1.cpp_backup
xarm6_demo_app1/src/interactivity/: interactive_robot.cpp
xarm6_gripper_moveit_config/config/: xarm6_with_gripper.srdf
xarm6_gripper_realsense_moveit_config/: CMakeLists.txt  package.xml
xarm6_gripper_realsense_moveit_config/config/: xarm6_with_gripper_realsense.srdf
xarm6_gripper_realsense_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  moveit_rviz_common.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  realMove_exec.launch  realMove_realsense_exec.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch  xarm6_gripper_moveit_gazebo.launch  xarm6_gripper_realsense_moveit_gazebo.launch  xarm6_with_gripper_moveit_controller_manager.launch.xml
(+17 files in other folders)
